Resolving Error
